# MdvrTest

./: build.gradle  settings.gradle
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
camera/src/main/java/com/flyzebra/camera/: MainActivity.java
camera/src/main/java/com/flyzebra/utils/: CameraUtil.java
camera/src/main/res/layout/: activity_main.xml
camera/src/main/res/values/: themes.xml
camera/src/main/res/values-night/: themes.xml
corelib/: build.gradle
corelib/src/main/cpp/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
libarcsoft/: build.gradle
libarcsoft/src/main/java/com/flyzebra/arcsoft/: AdasServer.java  ArcSoftActive.java  ArcSoftAdas.java  ArcSoftDms.java  DmsServer.java
libcore/: build.gradle
libcore/src/main/java/com/flyzebra/rtmplib/: RtmpPushHelper.java
librtmp/: .gitignore  build.gradle
librtmp/src/main/cpp/: CMakeLists.txt  CallBack.cpp  RtmpDump.cpp  RtmpDump.h  RtmpDumpCB.cpp  RtmpDumpCB.h  RtmpDumpJNI.cpp  RtmpDump_jni.cpp
librtmp/src/main/java/com/flyzebra/rtmp/: RtmpDump.java
libutils/: build.gradle
libutils/src/main/java/com/flyzebra/utils/: ByteUtil.java  DateUtil.java  IDUtil.java  ShellUtil.java
libyuv/: build.gradle
libyuv/src/main/cpp/: CMakeLists.txt  FlyYuv.cpp  FlyYuvJNI.cpp  FlyYuv_jni.cpp
libyuv/src/main/cpp/include/: libyuvz.h
libyuv/src/main/cpp/include/libyuvz/: convert.h  convert_argb.h  convert_from_argb.h  cpu_id.h  rotate_row.h  scale_rgb.h
libyuv/src/main/java/com/flyzebra/libyuv/: FlyYuv.java
libzebra/: build.gradle
libzebra/src/main/cpp/: CMakeLists.txt  Config.h  Fzebra.cpp  Fzebra.h  FzebraCB.cpp  FzebraCB.h  FzebraJNI.cpp  Fzebra_jni.cpp
libzebra/src/main/cpp/base/: BaseNotify.cpp  BaseNotify.h  Config.h  Global.cpp  Global.h  Notify.cpp  Notify.h  Terminal.cpp  Terminal.h  User.cpp  User.h
libzebra/src/main/cpp/buffer/: BufferManager.cpp  BufferManager.h  LoopBuf.cpp  LoopBuf.h
libzebra/src/main/cpp/client/: UserSession.cpp  UserSession.h
libzebra/src/main/cpp/include/libavcodec/: avcodec.h
libzebra/src/main/cpp/include/libavformat/: avformat.h  avio.h
libzebra/src/main/cpp/include/libavutil/: bprint.h  ffversion.h
libzebra/src/main/cpp/include/libyuvz/: compare_row.h  convert_from.h  planar_functions.h  rotate.h  row.h  scale.h  scale_row.h  scale_uv.h  video_common.h
libzebra/src/main/cpp/media/: AudioDecoder.cpp  AudioDecoder.h  AudioDecoderCB.h  VideoDecoder.cpp  VideoDecoder.h  VideoDecoderCB.h
libzebra/src/main/cpp/rfc/: Protocol.h
libzebra/src/main/cpp/rtsp/: RtspClient.cpp  RtspClient.h  RtspServer.cpp  RtspServer.h
libzebra/src/main/cpp/server/: UserClient.cpp  UserClient.h  UserServer.cpp  UserServer.h
libzebra/src/main/cpp/service/: ScreenService.cpp  ScreenService.h  SndOutService.cpp  SndOutService.h
libzebra/src/main/cpp/utils/: AudioUtil.cpp  AudioUtil.h  Base64.cpp  Base64.h  ByteUtil.cpp  ByteUtil.h  FlyLog.h  SysUtil.cpp  SysUtil.h  TimeUtil.cpp  TimeUtil.h  YuvUtil.cpp  YuvUtil.h
libzebra/src/main/java/com/flyzebra/core/: Fzebra.java  Zebra.java  ZebraNative.java
libzebra/src/main/java/com/flyzebra/core/media/: AudioCodec.java  AudioCodecCB.java  AudioEncoder.java  AudioEncoderCB.java  VideoCodec.java  VideoCodecCB.java  VideoEncoder.java  VideoEncoderCB.java  ZebraMuxer.java
libzebra/src/main/java/com/flyzebra/core/notify/: INotify.java  Notify.java  NotifyType.java  Protocol.java
libzebra/src/main/java/com/flyzebra/media/: AudioEncoder.java  AudioEncoderCB.java  VideoEncoder.java  VideoEncoderCB.java
libzebra/src/main/java/com/flyzebra/notify/: Notify.java  NotifyType.java
mdvr/: build.gradle
mdvr/libs/: androidq.rar  qcar_encoder.aar
mdvr/src/androidTest/java/com/flyzebra/dvrtest/: ExampleInstrumentedTest.java
mdvr/src/main/: AndroidManifest.xml
mdvr/src/main/cpp/: CMakeLists.txt  mdvrmain.cpp  native-lib.cpp
mdvr/src/main/java/com/flyzebra/dvrtest/: Config.java  GUtilMain.java  MainActivity.java  MdvrActivity.java
mdvr/src/main/java/com/flyzebra/dvrtest/opengl/: GlRender.java  GlShaderUtils.java  GlVideoView.java
mdvr/src/main/java/com/flyzebra/mdvr/: Config.java  Global.java  MdvrActivity.java  MdvrActivity1.java  MdvrActivity2.java  MdvrApplication.java  MdvrService.java  MyApp.java  MyRecevier.java
mdvr/src/main/java/com/flyzebra/mdvr/activity/: LauncherActivity.java  MusicTestActivity.java  QCameraActivity.java
mdvr/src/main/java/com/flyzebra/mdvr/activiy/: LauncherActivity.java  MdvrActivity.java  MdvrActivity1.java  MdvrActivity2.java
mdvr/src/main/java/com/flyzebra/mdvr/arcsoft/: AdasMusicConfig.java  AdasServer.java  AdasService.java  AlertMusicPlayer.java  ArcsoftActive.java  DmsMusicConfig.java  DmsServer.java  DmsService.java
mdvr/src/main/java/com/flyzebra/mdvr/audio/: AacService.java  AudioService.java  PcmService.java
mdvr/src/main/java/com/flyzebra/mdvr/camera/: AvcService.java  CamEncoder.java  (+10 more)
mdvr/src/main/res/color/: text_color.xml
mdvr/src/main/res/drawable/: adas_radio.xml  channel_1_radio.xml  channel_2_radio.xml  channel_3_radio.xml  channel_4_radio.xml  channel_all_radio.xml  edittext_bk.xml  edittext_bk01.xml  edittext_bk02.xml  horizon_background.xml  horizon_rectangle.xml  ic_keyboard_arrow_down.xml  ic_keyboard_arrow_left.xml  ic_keyboard_arrow_right.xml  ic_keyboard_arrow_up.xml  item_rectangle.xml  rectangle_01.xml  text_button.xml  text_button_01.xml  text_button_02.xml
mdvr/src/main/res/layout/: activity_main.xml  activity_main1.xml  activity_main2.xml  activity_mdvr.xml  activity_music_test.xml  dialog_adsa_edit.xml  fragment_adas.xml  fragment_adas_page1.xml  fragment_adas_page2.xml  fragment_channel0.xml  fragment_channel3.xml  fragment_channelall.xml
mdvr/src/main/res/raw/: fragment_nv21.glsl  glsl_nv12_vertex.glsl  glsl_yuv_fragment.glsl
mdvr/src/main/res/values/: strings.xml  themes.xml
mdvr/src/main/res/values-night/: themes.xml
mdvr/src/test/java/com/flyzebra/dvrtest/: ExampleUnitTest.java
rtmplib/src/main/cpp/: rtmp.cpp
utils/: build.gradle
utils/src/main/java/com/flyzebra/utils/: FlyLog.java  GlShaderUtil.java
(+53 files in other folders)
